--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Command line interface for the webiste musicforprogramming.net
 
-Using the little script, you can listen to/download the relaxing tunes of the aforementioned site 
+Using this little script, you can listen to/download the relaxing tunes of the aforementioned site 
 without ever having to leave the terminal.
 
 IMPORTANT:
